Improve computation of disagreement orientation (ensure that only duplex-local reads are considered). Make sure that non-perfect maxQForAllDuplexes prevents positions from contributing towards nPosDuplexCandidatesForDisagreementQ2. Output more information about duplexes and reads supporting each disagreement. Output total number of duplexes that carry the same disagreement. Write one of the top strand reads and one of the bottom strand reads in collapsed read BAM output file. Add new -reportCoverageAtAllPositions and -forceOutputPositions options. Give more informative error message when contig in file specified by forceOutputFilePath is not recognized. Log global duplex quality in SAM tag.
Track candidate hidden status on a duplex by duplex basis, which avoids interference between duplexes.
Add -Q2DisagCapsMatchingMutationQuality option; make sure that only matching mutation quality is capped.
Separate duplex-global and duplex-local qualities to avoid recomputing global qualities at every separate location covered by the duplex.
Compute distribution of duplex insert sizes, and output 10th and 90th percentiles.
Compute approximate probability of duplex collision (work in progress).

Make sure full exception stack traces are shown in functional tests.

Optimizations: make better use of barcode interning, skip call to duplex grouping method when nVariableBarcodeMismatchesAllowed is 0, add control of number of concurrently-analyzed contigs (which helps a worker maintain a constant load across staggered runs), replace registerDistanceToLigSite method (which appeared to be a major bottleneck in some cases), streamline candidate counting.

Make enableCostlyAssertions option more visible.
Add various improvements to help messages.

Update Google Error Prone.
Implement minor code improvements suggested by IntelliJ.
Clarify some nullness issues.